# raycasting-engine

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: bufferUtil.h  shader.h  shaderCode.h  vector.h  vertex.h
include/glad/: glad.h
shaders/: main.frag  main.vert
src/: bufferUtil.c  defines.h  framebuffer.h  glad.c  main.c  platform.h  platform_win32.c  shader.c  vector.c  vertex.c  window_win32.c  window_win32.h
